[package]
name = "cloud-hero"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
md5 = "0.7"
walkdir = "2"
configparser = "3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
